Fix wrapping on stat cards

--- a/src/module/catalog/src/datasets/components/DistributionList/index.scss
+++ b/src/module/catalog/src/datasets/components/DistributionList/index.scss
@@ -5,6 +5,7 @@
     .distribution__row {
         position: relative;
         margin-top: 10px;
+        margin-left:10px;
         padding: 10px;
         min-height: 50px;
         background-color: white;
