--- a/src/module/catalog/src/datasets/components/Overview/index.scss
+++ b/src/module/catalog/src/datasets/components/Overview/index.scss
@@ -21,33 +21,33 @@
     }
     .metadata--wrapper{
         max-width: 70%;
+        padding-right: 40px;
 
     }
 
-    .metadata--basic,
-    .metadata--more {
+    .metadata--basic{
         margin-bottom: 15px;
         color: $text-colour;
         p {
             margin-bottom: 10px;
+            margin-left: 10px;
         }
     }
 
 
     .cards--wrapper {
         display: flex;
-        justify-content: space-evenly;
         margin-top: 50px;
-        & a:first-child{
-            margin-left:0;
-        }
+        flex-wrap: wrap;
         .escoOverview__statBox {
             cursor: pointer;
-            min-width: 130px;
+            min-width: 120px;
+            width: 120px;
             min-height: 40px;
             height: 40px;
             margin:0;
-            margin-left: 15px;
+            margin-left: 10px;
+            margin-top:10px;
             padding: 7px;
             flex-direction: row;
             justify-content: flex-start;
@@ -117,6 +117,7 @@
         color: $text-colour;
         margin-bottom: 40px;
         word-break: break-word;
+        margin-left: 10px;
     }
 
     .icon--wrapper{
@@ -141,9 +142,11 @@
     }
 }
 .distributions {
+    padding-bottom: 25px;
     width: 70%;
 
     .header {
+        min-width: 150px;
         width: 28%;
         border-bottom: 1.5px solid $accent-colour;
         align-items: center;
